Closed Bug 603336 Opened 15 years ago Closed 15 years ago

e10s & MozOrientation: Infinite page loading

Categories

(Firefox for Android Graveyard :: General, defect)

ARM
Android
defect
Not set
normal

Tracking

(fennec2.0b3+)

VERIFIED FIXED
Tracking Status
fennec 2.0b3+ ---

People

(Reporter: paul, Assigned: blassey)

Details

Attachments

(1 file, 1 obsolete file)

This page never stops loading if e10s is activating. Works fine if e10s disabled. <!DOCTYPE html> <html> <head> <script> window.addEventListener("MozOrientation", function(e) {}, true); </script> </head> <body>foobar</body> <html>
tracking-fennec: --- → ?
Assignee: nobody → doug.turner
tracking-fennec: ? → 2.0b3+
Attached patch patch (obsolete) — Splinter Review
filed bug 605341 to remote this and make it work for content
Assignee: doug.turner → blassey.bugs
Attachment #484189 - Flags: review?(doug.turner)
Attached patch patchSplinter Review
sorry, typo
Attachment #484189 - Attachment is obsolete: true
Attachment #484190 - Flags: review?(doug.turner)
Attachment #484189 - Flags: review?(doug.turner)
Comment on attachment 484190 [details] [diff] [review] patch do we have to remote these too?
Attachment #484190 - Flags: review?(doug.turner) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Maemo;Linux armv71; rv:2.0b8pre) Gecko/20101020 Firefox/4.0b8pre Fennec/4.0b2pre Mozilla/5.0 (Android; Linux armv71; rv2.0b8pre) Gecko/20101020 Firefox/4.0b8pre Fennec/4.0b2pre
verified on the above platforms.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: