bug 603336 - e10s & MozOrientation, content crash r=dougt a=blocking-fennec