dom/system/android/AndroidLocationProvider.cpp
@@ -1,4 +1,5 @@
-/* ***** BEGIN LICENSE BLOCK *****
+/* -*- Mode: c++; c-basic-offset: 4; tab-width: 20; indent-tabs-mode: nil; -*-
+ * ***** BEGIN LICENSE BLOCK *****
  * Version: MPL 1.1/GPL 2.0/LGPL 2.1
  *
  * The contents of this file are subject to the Mozilla Public License Version
@@ -57,6 +58,8 @@ AndroidLocationProvider::~AndroidLocationProvider()
 NS_IMETHODIMP
 AndroidLocationProvider::Startup()
 {
+    if (!AndroidBridge::Bridge())
+        return NS_ERROR_NOT_IMPLEMENTED;
     AndroidBridge::Bridge()->EnableLocation(true);
     return NS_OK;
 }
@@ -73,6 +76,8 @@ AndroidLocationProvider::Watch(nsIGeolocationUpdate* aCallback)
 NS_IMETHODIMP
 AndroidLocationProvider::Shutdown()
 {
+    if (!AndroidBridge::Bridge())
+        return NS_ERROR_NOT_IMPLEMENTED;
     AndroidBridge::Bridge()->EnableLocation(false);
     return NS_OK;
 }
